--- a/Backend/app/package.json
+++ b/Backend/app/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.12.0",
+    "bcrypt": "^5.1.1",
     "codegen": "^0.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^15.8.0",
     "graphql-middleware": "^6.1.35",
+    "graphql-shield": "^7.6.5",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "reflect-metadata": "^0.2.2",
@@ -24,7 +28,9 @@
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0",
     "typescript": "^5.4.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
@@ -33,7 +39,9 @@
     "@graphql-codegen/typescript-operations": "^4.2.0",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "cross-env": "^7.0.3"
   }
