--- a/Backend/app/src/config/dev.env
+++ b/Backend/app/src/config/dev.env
@@ -6,6 +6,12 @@ APP_ROUTE_PREFIX=/api
 
 GRAPHQL_ROUTE=/graphql
 
-DATABASE=mongo
+DATABASE=mongodb
 MONGO_DATABASE_NAME=SuperMart
 MONGO_DATABASE_HOST=127.0.0.1:27017
+
+APPROVAL_KEY="superMart_s*u$p#e@r"
+
+TYPE_OF_AUTHENTICATION=key
+
+JWT_SECRECT_KEY=superMart_!@#$%_secrect
